syntax = "proto3";

package pb;

import "user.proto";

option go_package = "demo-grpc/pb";

message CreateUserRequest {
    string username = 1;
    string real_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    UserMessage user = 1;
}