syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "demo-grpc/pb";

message UserMessage {
    string username = 1;
    string real_name = 2;
    string email = 3;

    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}